Fix issues #74, #71 add spacing to share section in mobile, line up buttons in footer form on mobile

--- a/wp-content/themes/Noel/web/sass/_contact-form.scss
+++ b/wp-content/themes/Noel/web/sass/_contact-form.scss
@@ -93,7 +93,10 @@
       }
     }
     .gform_previous_button + .button {
-      margin-top: rem-calc(-8px);
+      margin-top: rem-calc(8px);
+      @include breakpoint(medium) {
+          margin-top: rem-calc(-8px);
+      }
     }
   }
 }
